add: warehouse seeder
